# web-image-generator

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  image_record.rs  main.rs
src/util/: mod.rs
test/: config.json  integration
