[package]
name = "web-image-resizer"
version = "0.1.0"
edition = "2021"
authors = ["Jelte Dirks<j.dirks@outlook.com>"]
license = "MIT"
description = "A tool for converting an image to specific predefined sizes."
readme = "README.md"
homepage = "https://github.com/jeltedirks/web-image-generator"
repository = "https://github.com/jeltedirks/web-image-generator"
keywords = ["cli", "image", "conversion", "web", "icons"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
image = "0.24.2"
